--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.10",
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.6",
     "cross-env": "^7.0.3",
     "jest": "^29.4.3",
     "sqlite3": "^5.1.4",
@@ -31,6 +32,8 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
     "zod": "^3.22.2"
   }
